brat/test/golden/error/multilambda-id3.brat
f(Bool) -> { Qubit -o Qubit }
f = { true => |;||false =>|;|;|}
